fix menu item wrapping

--- a/src/layouts/SidebarMenu.scss
+++ b/src/layouts/SidebarMenu.scss
@@ -357,7 +357,7 @@
 }
 
 .sidebarWrapper.noDAO {
-  width: 125px;
+  width: 127px;
 
   .menuContent {
     background-color: transparent;
